# Onix

./: CMakeLists.txt
cmake/: FindBZip2.cmake  FindBoost.cmake  FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  Finduring.cmake
data/: data_generator.cc  data_generator.hpp  data_generator.py  random_generator.cc  random_generator.hpp  workload_generator.cc  workload_generator.hpp
database/mlosDb/: MANIFEST-000042
interface/: tuning_interface.cc
performance/: PerformanceGraph.ipynb
performance_measurement/: measure_performance.cc
src/data/: data_generator.cc  data_generator.hpp  database_handler.cc  database_handler.hpp  random_generator.cc  random_generator.hpp  workload_generator.cc  workload_generator.hpp
src/db_manager/: db_manager.cc  db_manager.hpp
src/interface/: tuning_interface.cc  tuning_interface.hpp
src/performance/: PerformanceGraph.ipynb  performance_graph.py
src/tuning/: TuningParams.cc  TuningParams.hpp  calculate_params.py  mlos_BO.ipynb  mlos_BO.py
tuning/: TuningParams.cc  TuningParams.hpp
